Fix styles for z-index on upload page & translate page

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -853,7 +853,7 @@ color:#333;}
 	    left: 0;
 	    width: 100%;
 	    height: 100%;
-	    z-index: 999999999;
+	    z-index: 12;
 	    opacity: 0.6;
     }
 	
@@ -899,7 +899,7 @@ color:#333;}
     overflow-x: hidden;
     overflow-y: auto;
     position: fixed;
-    z-index: 10000000000000;
+    z-index: 12;
     top: 0;
     right: -1100px;
     background: #fff;
